apps/media/bazarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: linuxserver/bazarr:v0.9.1-ls104
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6767
          name: bazarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
        resources: {}
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-bazarr
      - name: movies
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/Movies
      - name: tv
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/Series
