apps/media/bazarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  ports:
  - name: bazarr
    targetPort: bazarr
    port: 6767
  selector:
    app: bazarr
