apps/media/bazarr/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: bazarr.home-lab.io
    http:
      paths:
      - path:
        backend:
          serviceName: bazarr
          servicePort: 6767
